log
Fri 12 May 2023 12:19:03 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
5dcc37c
Fri 12 May 2023 12:20:54 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createHeap’:
heap.c:41:11: error: ‘A’ is used uninitialized [-Werror=uninitialized]
   41 |   A->data = NULL;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
815d832
Fri 12 May 2023 12:21:25 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b370d50
Fri 12 May 2023 12:23:47 PM UTC: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
060485e
Fri 12 May 2023 12:25:19 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
35741e3
Fri 12 May 2023 12:25:55 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
647bf48
Fri 12 May 2023 12:26:30 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createHeap’:
heap.c:38:59: error: ‘*M.capac’ is used uninitialized [-Werror=uninitialized]
   38 |   M->heapArray = (heapElem *) malloc(sizeof(heapElem) * (M->capac) *3);
      |                                                         ~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
360ae49
Fri 12 May 2023 12:26:47 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
test.c: In function ‘createHeap’:
heap.c:37:39: error: ‘M’ is used uninitialized [-Werror=uninitialized]
   37 |   M = (Heap *) malloc(sizeof(Heap)* (M->capac) *3);
      |                                     ~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
90f54ac
Fri 12 May 2023 12:26:57 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3b6cf0b
Fri 12 May 2023 12:39:44 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
2ecea02
Fri 12 May 2023 12:40:35 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:28: error: ‘heapElem’ {aka ‘struct nodo’} has no member named ‘p’
   23 |     return pq->heapArray[h].p->data;
      |                            ^
Compilation failed
1e1236b
Fri 12 May 2023 12:40:43 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
f96bb3c
Fri 12 May 2023 12:41:44 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
aee7295
Fri 12 May 2023 12:42:41 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
3d51109
Fri 12 May 2023 12:43:35 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
3bd474c
Fri 12 May 2023 12:45:21 PM UTC: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|2
total_score: 20/70
88666f9
Fri 12 May 2023 12:52:53 PM UTC: 
 heap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:34:7: error: unused variable ‘h’ [-Werror=unused-variable]
   34 |   int h = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
ded3abe
Fri 12 May 2023 12:52:58 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
b0415ba
